--- a/Examples/loco_fccee_z.ipynb
+++ b/Examples/loco_fccee_z.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "An accelerator with m-BPMS and n-correctors produces an m x n dimensional response matrix:\n",
     "$$C_{mn}=\\frac{\\sqrt{\\beta_m\\beta_n}}{2\\sin(\\pi \\nu)}\\cos(\\pi\\nu -\\phi(s)+\\phi(s_0)) + \\frac{\\eta_i \\eta_j}{\\alpha_c L_o}$$\n",
-    "In LOCO the measured orbit response matrix ORM is fitted to the lattice model, to find the proper quadrpoles strengths:\n"
+    "In LOCO the measured orbit response matrix ORM is fitted to the lattice model, to find the proper quadrpoles strengths.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -24,7 +24,7 @@
     "arc_quads = np.load(\"arc_quads.npy\")\n",
     "arc_sext = np.load(\"arc_sext.npy\")\n",
     "\n",
-    "dCx = np.load('dCx.npy') # Jacopian, calculated while sextupoles off\n",
+    "dCx = np.load('dCx.npy') # Jacobian, calculated while sextupoles off\n",
     "dCy = np.load('dCy.npy')\n",
     "dCxy = np.load('dCxy.npy')\n",
     "dCyx = np.load('dCyx.npy')\n",
@@ -33,7 +33,7 @@
     "Rvy = np.load('Rvy.npy')\n",
     "num_used_correctors = 10\n",
     "correctrs_kick = 1.e-6\n",
-    "dk = 1.e-6 # change in quads strengths for\n",
+    "dk = 1.e-6 # change in quads strengths\n",
     "\n",
     "misaligned_elements = arc_quads\n",
     "shiftx = 10.e-6 # Field and alignments error_values\n",
@@ -846,7 +846,7 @@
     "    bx_rms_err, by_rms_err = getBetaBeat(ring, twiss, bpm_indices, makeplot = False)\n",
     "    print('LOCO iterations')\n",
     "    t0 = time.time()\n",
-    "    A, B = defineJacopianMatrices(Cx0, Cy0, Cxy0, Cyx0, Cx, Cy, Cxy, Cyx, dCx, dCy, dCxy,dCyx)\n",
+    "    A, B = defineJacobianMatrices(Cx0, Cy0, Cxy0, Cyx0, Cx, Cy, Cxy, Cyx, dCx, dCy, dCxy,dCyx)\n",
     "    t1 = time.time()\n",
     "    print(f\"Execution time: {t1-t0} sec\")\n",
     "    np.save('A_{}.npy'.format(x), A)\n",
