--- a/Examples/PETRA III/run_LM.ipynb
+++ b/Examples/PETRA III/run_LM.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "C_measured, C_model, Noise_BPMx, Noise_BPMy, BPM_names, HCM_names, VCM_names, Jn = load_data(ring)\n",
     "quads_indices, skew_indices,quad_fam_names, quads_fam_indices, bpm_indices, corrector_indices, dipole_indices,hcm_index,vcm_index,sext_indexes, bpm_x_ind, bpm_y_ind,nominal_crom, nominal_tune = load_indices(ring)\n",
-    "#Jn = Full_Jacobian(Jn , C_model, hcm_index, vcm_index, bpm_x_ind, bpm_y_ind)\n",
+    "Jn = Full_Jacobian(Jn , C_model, hcm_index, vcm_index, bpm_x_ind, bpm_y_ind)\n",
     "\n",
     "[elemdata0, beamdata, elemdata] = at.get_optics(ring, bpm_indices)\n",
     "twiss = elemdata\n",
@@ -57,7 +57,7 @@
     "\n",
     "# Model ORM & Jacobian\n",
     "\n",
-    "#C_model = model_orm(ring, correctors_kick,  hcm_index, vcm_index, bpm_x_ind,bpm_y_ind, includeDispersion=False, include_coupling=True)\n",
+    "#C_model = model_orm(correctors_kick, ring,  hcm_index, vcm_index, bpm_x_ind,bpm_y_ind, includeDispersion=False, include_coupling=True)\n",
     "#Jn = calculate_jacobian(ring, quads_fam_indices, C_model, correctors_kick, hcm_index ,vcm_index, bpm_x_ind, bpm_y_ind, dk\n",
     "#                      , includeDispersion=False,include_coupling = True,\n",
     "#                       skew=False, family=True, full_jacobian=True)"
