--- a/Examples/PETRA III/run_NG.ipynb
+++ b/Examples/PETRA III/run_NG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -58,22 +58,22 @@
     "\n",
     "# Model ORM & Jacobian\n",
     "\n",
-    "C_model = model_orm(ring, correctors_kick,  hcm_index, vcm_index, bpm_x_ind,bpm_y_ind, includeDispersion=False, include_coupling=True)\n",
-    "Jn = calculate_jacobian(ring, quads_fam_indices, C_model, correctors_kick, hcm_index ,vcm_index, bpm_x_ind, bpm_y_ind, dk\n",
-    "                      , includeDispersion=False,include_coupling = True,\n",
-    "                       skew=False, family=True, full_jacobian=True)\n"
+    "#C_model = model_orm(correctors_kick, ring,  hcm_index, vcm_index, bpm_x_ind,bpm_y_ind, includeDispersion=False, include_coupling=True)\n",
+    "#Jn = calculate_jacobian(ring, quads_fam_indices, C_model, correctors_kick, hcm_index ,vcm_index, bpm_x_ind, bpm_y_ind, dk\n",
+    "#                      , includeDispersion=False,include_coupling = True,\n",
+    "#                       skew=False, family=True, full_jacobian=True)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T20:23:34.388031Z",
-     "start_time": "2024-03-08T20:23:07.152737700Z"
+     "end_time": "2024-03-25T15:56:15.067652300Z",
+     "start_time": "2024-03-25T15:55:55.552477500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -141,14 +141,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T20:23:37.073019300Z",
-     "start_time": "2024-03-08T20:23:34.405762800Z"
+     "end_time": "2024-03-25T15:56:16.871559600Z",
+     "start_time": "2024-03-25T15:56:15.080031600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\musa\\Desktop\\at\\My_Examples\\PETRAIII_Fitting\\at_modules_loco_families.py:903: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "C:\\Users\\musa\\Desktop\\Optics-corrections-with-PyAT\\Examples\\PETRA III\\at_modules_loco.py:976: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -275,18 +275,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T20:26:07.261134900Z",
-     "start_time": "2024-03-08T20:23:37.089853600Z"
+     "end_time": "2024-03-25T15:58:44.656679200Z",
+     "start_time": "2024-03-25T15:56:16.880631500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-25T15:58:44.674518800Z",
+     "start_time": "2024-03-25T15:58:44.661768200Z"
+    }
    }
   }
  ],
